# link_o_matic

./: .gitignore  Cargo.toml  README.md
src/: delete.rs  fs.rs  install.rs  lib.rs  main.rs  messages.rs
